<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NUMAD-MichaelAllen</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_name">Michael Allen</string>
    <string name="my_email">allen.mic@husky.neu.edu</string>
    <string name="menu_settings">Settings</string>
    <string name="team_label">About</string>
    <string name="title_activity_team">Team Members</string>
    <string name="phoneId_label">Get Phone ID</string>
    <string name="create_error_label">Create Error</string>
    <string name="sudoku_button_label">Play Sudoku</string>
    
    <string name="boggle_main_label">Play Boggle</string>
    <string name="boggle_main_title">B  O  G  G  L  E</string>
    <string name="boggle_new_game_label">New Game</string>
    <string name="boggle_acknowledgements_label">Acknowledgements</string>
    <string name="boggle_game_title">Boggle!</string>
    <string name="boggle_timer_start">3:00</string>
    <string name="boggle_game_quit">Quit</string>
    <string name="boggle_score_screen_title">Game Stats</string>
    <string name="boggle_main_screen_text">Exit</string>
    <string name="boggle_continue_button_label">Continue Game</string>
    <string name="boggle_pause_text">Pause</string>
    <string name="boggle_resume_text">Resume</string>
    <string name="boggle_acknowledgements_title">Acknowledgements</string>
    <string name="acknowledgements_text">
        Sources: The three mp3 files I used for sound effects were from a forum
        I found by googling sound effects. The forum link is http://modmyi.com/forums\n\n                                
        
        Code: I didn\'t use anyone else\'s code directly (except Sudoku code)
        but the colors from some XML backgrounds were found online   \n\n             
        
        People: Thanks to Prof Intille and Mansoor. 
        Also, thanks to my fellow classmates who contributed on Piazza.
        I got my inspiration for the method of splitting the dictionary by prefix through Piazza
    </string>
    <string name="boggle_high_scores_label">High Scores</string>
    <string name="boggle_rules_label">Rules and Info</string>
    <string name="boggle_rules_text">The scoring for correct unique words is based on the word\'s length \n\n
        If the word less than three characters, no points will be awarded\n
        If the word is 3 or 4 characters long, one point will be awarded\n
        If the word is over four characters long, one point will be awarded,\n
        \t plus an additional point for every character over the first four\n
        \n Example: pizza would yield two points \n
	</string>
	<string name="ok_test">OK</string>
	
	<string name="pers_boggle_main_label">Persistent Boggle</string>
	<string name="pers_boggle_challenge_back">Back</string>
	<string name="pers_boggle_challenge_user_label">Challenge Someone!</string>
	<string name="pers_boggle_accept_button_text">Start Game</string>
	<string name="pers_boggle_decline">Decline Challenge</string>
    <string name="pers_boggle_accept_challenge_label">Accept the Challenge?</string>
    <string name="pers_boggle_radio_sync">Synchronous Mode</string>
    <string name="pers_boggle_radio_async">Asynchronous Mode</string>
    <string name="pers_boggle_game_paused_overlay">Game Paused</string>
    <string name="pers_boggle_acknowledgements">Sources: The three mp3 files I used for sound effects were from a forum
        I found by googling sound effects. The forum link is http://modmyi.com/forums. I got the graphics
        for the boggle board at this site: http://www.dibbus.com/2011/03/9patch-images-in-android/ \n
        I found some buttons that I used on most of the screens here: 
        http://android9patch.blogspot.com/2011/09/android-9-patch-pack-18-button-series.html?m=1\n\n                                
        
        Code: I didn\'t use anyone else\'s code directly (except Sudoku code)
        but the colors from some XML backgrounds were found online   \n\n             
        
        People: Thanks to Prof Intille and Mansoor. 
        Also, thanks to my fellow classmates who contributed on Piazza.
        Thanks to Google for making their GCM service available for free
        I got my inspiration for the method of splitting the dictionary by prefix through Piazza
   </string>
   <string name="pers_boggle_rules">To play Persistent Boggle, challenge a user to a sync or async game. 
       A sync game will be in real time with the same board for each user, whereas an async game is turn based with a 
       new board every turn. A sync game can be switched to async when one user exits the game while it is in progress.
       Sync games are synchronized using each phone\'s clock, so the game will generally never be perfectly synchronized
       \n\n
       Scoring:
       The scoring for correct unique words is based on the word\'s length \n\n
        If the word less than three characters, no points will be awarded\n
        If the word is 3 or 4 characters long, one point will be awarded\n
        If the word is over four characters long, one point will be awarded,\n
        \t plus an additional point for every character over the first four\n
        \n Example: pizza would yield two points \n</string>
   
   <string name="soap_main_button">Soap</string>
   <string name="soap_start_service">Start Monitoring</string>
   <string name="soap_main_label">Soap</string>
   <string name="soap_kill_service">Stop Monitoring</string>
   
   <string name="sudoku_title">Android Sudoku</string>
   <string name="continue_label">Continue</string>
   <string name="new_game_label">New Game</string>
   <string name="about_label">About</string>
   <string name="exit_label">Exit</string>

   <string name="settings_label">Settings...</string>
   <string name="settings_title">Sudoku settings</string>
   <string name="settings_shortcut">s</string>
   <string name="music_title">Music</string>
   <string name="music_summary">Play background music</string>
   <string name="hints_title">Hints</string>
   <string name="hints_summary">Show hints during play</string>

   <string name="new_game_title">Difficulty</string>
   <string name="easy_label">Easy</string>
   <string name="medium_label">Medium</string>
   <string name="hard_label">Hard</string>

   <string name="game_title">Game</string>
   <string name="no_moves_label">No moves</string>
   <string name="keypad_title">Keypad</string>
   
   <string name="about_title">About Android Sudoku</string>
   <string name="about_text">\
		Sudoku is a logic-based number placement puzzle.
		Starting with a partially completed 9x9 grid, the
		objective is to fill the grid so that each
		row, each column, and each of the 3x3 boxes
		(also called <i>blocks</i>) contains the digits
		1 to 9 exactly once.
	</string>
</resources>