<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:padding="30dip"> 
    
    <TextView
        android:text="@string/boggle_main_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="25dip"
        android:textSize="24.5sp"
        />
    
    <Button
        android:id="@+id/boggle_new_game_button"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/boggle_new_game_label"
	    />
    
    <Button
        android:id="@+id/boggle_options_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boggle_options_label"
        />
        
    <Button
        android:id="@+id/boggle_exit_button"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/exit_label"
	    />
    

</LinearLayout>